K8/payment-service.yaml
# k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecomm-backend
  labels:
    azure.workload.identity/use: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      serviceAccountName: "workload-identity-sa"
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: ecomm-keyvault-secrets
      containers:
      - name: payment-service
        image: ecomdevacr.azurecr.io/payment:paymentv1
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecomm-backend
spec:
  selector:
    app: payment-service
  ports:
  - port: 80
    targetPort: 3003
  type: ClusterIP
